# autogen-openaiext-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
autogen_openaiext_client/: __init__.py  client.py  config.py  info.py
examples/: magentic_coder_example.py  magentic_one_example.py
tests/: test_gemini.py
